# django-telegram-bot-cookiecutter

./: .editorconfig  .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
tests/: build.sh  conftest.py
{{cookiecutter.project_name}}/: .editorconfig  docker-compose.yml  pyproject.toml
{{cookiecutter.project_name}}/config/: .env
{{cookiecutter.project_name}}/docker/: ci.sh
{{cookiecutter.project_name}}/docs/pages/template/: linters.rst
{{cookiecutter.project_name}}/server/: urls.py
{{cookiecutter.project_name}}/server/apps/bot/: admin.py  dispatcher.py  models.py  selectors.py  services.py  urls.py  views.py
{{cookiecutter.project_name}}/server/apps/bot/handlers/: __init__.py  sorry.py  start.py
{{cookiecutter.project_name}}/server/apps/bot/management/commands/: run_polling.py
{{cookiecutter.project_name}}/server/apps/bot/migrations/: 0001_initial.py
{{cookiecutter.project_name}}/server/settings/: __init__.py
{{cookiecutter.project_name}}/server/settings/components/: common.py
{{cookiecutter.project_name}}/tests/test_apps/test_main/test_views/: test_index_view.py
