[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"


[tool.poetry]
name = "django-telegram-bot-cookiecutter"
description = "Bleeding edge `django2.2` template focused on developing telegram bots."
version = "0.1.0"
readme = "README.md"
authors = [
  "Nikita Sobolev <mail@sobolevn.me>",
  "Yarfuo <yarfuo@gmail.com>"
]

license = "MIT"


[tool.poetry.dependencies]
python = "^3.8"

cookiecutter = "^1.7"
jinja2-git = "^1.1"
python-telegram-bot = "^13.5"


[tool.poetry.dev-dependencies]
binaryornot = "^0.4"

wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.4"
nitpick = "^0.26"

pytest = "^5.4"
pytest-randomly = "^3.7"
pytest-cookies = "^0.5"

safety = "^1.10"

docker-compose = "^1.28"
docker-image-size-limit = "^0.4"
tomlkit = "^0.7"
